--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get body in shape and stay healthy - Fitness</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="https://kit.fontawesome.com/4a82536f30.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <h3 class="brand-name">Fitness</h3>
+            <ul class="navbar-pages">
+                <li><a href="#" class="navbar-page-link home">Home</a></li>
+                <li><a href="" class="navbar-page-link">Service</a></li>
+                <li><a href="" class="navbar-page-link">Contact</a></li>
+                <li><a href="" class="navbar-page-link">About</a></li>
+            </ul>
+            <div class="navbar-icon">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
