--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://kit.fontawesome.com/4a82536f30.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <nav class="navbar">
@@ -21,8 +23,34 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="tagline">Get body in <span class="shape-text">shape</span> & stay healthy</h1>
+                <p class="description">A huge selection of health and fitness content, healthy recipes and
+                    transformation stories to help you get fit and stay fit!</p>
+                <div class="banner-btn-container">
+                    <button class="primary-btn">Join Club Now!</button>
+                    <button class="secondary-btn">Download App</button>
+                </div>
+            </div>
+            <div class="banner-img-container">
+                <img class="banner-img" src="assets/images/banner-img.png" alt="trainer">
+                <div class="banner-img-card videos-card">
+                    <h5>500+</h5>
+                    <p>Free Workout Videos</p>
+                </div>
+                <div class="banner-img-card tutorial-card">
+                    <div class="tutorial-circle"></div>
+                    <div>
+                        <h5>350+</h5>
+                        <p>Video Tutorial</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <main></main>
     <footer></footer>
 </body>
+
 </html>
