banner section mobile styles completed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p>Free Workout Videos</p>
                 </div>
                 <div class="banner-img-card tutorial-card">
-                    <div class="tutorial-circle"></div>
+                    <div class="tutorial-circle"><i class="fa-solid fa-play"></i></div>
                     <div>
                         <h5>350+</h5>
                         <p>Video Tutorial</p>
