change your habits section desktop styles completed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <!-- navbar -->
         <nav class="navbar">
             <h3 class="brand-name">Fitness</h3>
             <ul class="navbar-pages">
@@ -23,6 +24,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
+        <!-- banner section -->
         <div class="banner">
             <div class="banner-content">
                 <h1 class="tagline">Get body in <span class="shape-text">shape</span> & stay healthy</h1>
@@ -51,7 +53,38 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <!-- change your habits section -->
+        <section class="habits">
+            <div class="habits-content">
+                <h2 class="title">Change Your Habits</h2>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym.</p>
+            </div>
+            <div class="habits-card-container">
+                <div class="habit-card">
+                    <img src="assets/images/habits-1.png" alt="training">
+                    <h3 class="habit-card-title">Movement</h3>
+                    <p class="description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img src="assets/images/habits-2.png" alt="training">
+                    <h3 class="habit-card-title">Time</h3>
+                    <p class="description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img src="assets/images/habits-3.png" alt="training">
+                    <h3 class="habit-card-title">Practice</h3>
+                    <p class="description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img src="assets/images/habits-4.png" alt="training">
+                    <h3 class="habit-card-title">Weight Loss</h3>
+                    <p class="description">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
