join now banner section desktop & mobile screen styles completed

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </header>
     <main>
-        <!-- change your habits section -->
+        <!-- change your habits -->
         <section class="habits">
             <div class="habits-content">
                 <h2 class="title">Change Your Habits</h2>
@@ -81,6 +81,20 @@
                     <img src="assets/images/habits-4.png" alt="training">
                     <h3 class="habit-card-title">Weight Loss</h3>
                     <p class="description">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Run an extra mile easy -->
+        <section class="join-now-banner">
+            <div class="join-now-banner-parent">
+                <div class="join-now-banner-content">
+                    <h2 class="title">Run an Extra <br> Mile Easily</h2>
+                    <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless
+                        of income or access to a gym. With hundreds of professional workouts.</p>
+                    <button class="primary-btn">Join Now</button>
+                </div>
+                <div class="join-now-img">
                 </div>
             </div>
         </section>
