bmi calculator, testimonials and footer section responsive styles completed

--- a/index.html
+++ b/index.html
@@ -98,8 +98,223 @@
                 </div>
             </div>
         </section>
+
+        <section class="bmi-calculator-container">
+            <div class="bmi-content">
+                <h2 class="title">BMI Calculator</h2>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym.</p>
+            </div>
+            <div class="bmi-calculator-background">
+                <div class="bmi-calculator-parent">
+                    <div class="bmi-info">
+                        <h3 class="bmi-cal-title">BMI Calculator Chart</h3>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>BMI</th>
+                                    <th>Weight Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Below 18.5</td>
+                                    <td>Underweight</td>
+                                </tr>
+                                <tr>
+                                    <td>18.5 - 24.9</td>
+                                    <td>Healthy</td>
+                                </tr>
+                                <tr>
+                                    <td>25.0 - 29.9</td>
+                                    <td>Overweight</td>
+                                </tr>
+                                <tr>
+                                    <td>30.0 - and Above</td>
+                                    <td>Obese</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="bmi-calculator">
+                        <h3 class="bmi-cal-title">Calculate Your BMI</h3>
+                        <p class="description">We believe fitness should be accessible to everyone, everywhere,
+                            regardless of income or access to a gym.</p>
+                        <form action="">
+                            <input type="text" name="bmi" id="" placeholder="Height/cm">
+                            <input type="text" name="bmi" id="" PlaceHOlder="Weight/Kg">
+                            <input type="tel" name="bmi" id="" placeholder="Age">
+                            <div class="select-gender">
+                                <input type="text" name="bmi" id="" placeholder="Sex" disabled>
+                                <i class="fas fa-chevron-down"></i>
+                            </div>
+                            <div class="select-activity-factor">
+                                <input type="text" name="bmi" id="" placeholder="select an activity factor" disabled>
+                                <i class="fas fa-chevron-down"></i>
+                            </div>
+                            <input type="button" value="Calculate" class="primary-btn">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimonial">
+            <div class="testimonial-content">
+                <h2 class="title">Testimonials</h2>
+                <p class="description">Our customers love what we do. Don't just take our word for it. See how we've
+                    helped others achieve their goals.</p>
+            </div>
+            <div class="testimonial-cards-container">
+                <div class="testimonial-card">
+                    <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
+                    <p class="feedback">I was blown away by their level of service. They truly listened to my needs and <mark>delivered a solution that exceeded my expectations.</mark> Their expertise is unparalleled!</p>
+                    <div class="profile-info">
+                        <img src="assets/images/habits-1.png" alt="" class="profile-pic">
+                        <div class="name-handle-container">
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Emily
+                                Carter</a>
+                            <span class="profile-handle">@johan_drick</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
+                    <p class="feedback">Working with them was a seamless experience. Their efficiency and
+                        professionalism are commendable. I'm incredibly satisfied with the results they achieved</p>
+                    <div class="profile-info">
+                        <img src="assets/images/habits-2.png" alt="" class="profile-pic">
+                        <div class="name-handle-container">
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Michael
+                                Davis</a>
+                            <span class="profile-handle">@johan_drick</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
+                    <p class="feedback">Their innovative approach to problem-solving is refreshing. They went above and
+                        beyond to <mark>ensure my complete satisfaction.</mark> I wholeheartedly recommend their services</p>
+                    <div class="profile-info">
+                        <img src="assets/images/habits-3.png" alt="" class="profile-pic">
+                        <div class="name-handle-container">
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Olivia
+                                Johnson</a>
+                            <span class="profile-handle">@johan_drick</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
+                    <p class="feedback">Excellent customer service and top-notch quality. A pleasure to work with. Their dedication to customer satisfaction is commendable</p>
+                    <div class="profile-info">
+                        <img src="assets/images/habits-4.png" alt="" class="profile-pic">
+                        <div class="name-handle-container">
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">William
+                                Brown</a>
+                            <span class="profile-handle">@johan_drick</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
+                    <p class="feedback">Their team is incredibly talented and dedicated. They made the entire process
+                       <mark>stress-free and enjoyable.</mark> I couldn't be happier with the results</p>
+                    <div class="profile-info">
+                        <img src="assets/images/habits-1.png" alt="" class="profile-pic">
+                        <div class="name-handle-container">
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Sophia
+                                Miller</a>
+                            <span class="profile-handle">@johan_drick</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
+                    <p class="feedback">This company has revolutionized the way I do business. Their solutions have
+                        significantly improved my efficiency and bottom line. I'm a loyal customer for life</p>
+                    <div class="profile-info">
+                        <img src="assets/images/habits-2.png" alt="" class="profile-pic">
+                        <div class="name-handle-container">
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Ethan
+                                Garcia</a>
+                            <span class="profile-handle">@johan_drick</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
+                    <p class="feedback">I was skeptical at first, but their results speak for themselves. They delivered
+                        on all their promises and more. I'm incredibly grateful for their expertise</p>
+                    <div class="profile-info">
+                        <img src="assets/images/habits-3.png" alt="" class="profile-pic">
+                        <div class="name-handle-container">
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Ava
+                                Rodriguez</a>
+                            <span class="profile-handle">@johan_drick</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
+                    <p class="feedback">Working with them was a pleasure from start to finish. Their team is
+                        knowledgeable, responsive, and dedicated to delivering exceptional results. I'm truly impressed
+                    </p>
+                    <div class="profile-info">
+                        <img src="assets/images/habits-4.png" alt="" class="profile-pic">
+                        <div class="name-handle-container">
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Grace
+                                Anderson</a>
+                            <span class="profile-handle">@johan_drick</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
+                    <p class="feedback">Their customer service is top-notch. They were <mark>always available to answer my
+                        questions</mark> and address my concerns. I highly recommend them to anyone looking for a reliable
+                        partner</p>
+                    <div class="profile-info">
+                        <img src="assets/images/habits-1.png" alt="" class="profile-pic">
+                        <div class="name-handle-container">
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Daniel
+                                Martinez</a>
+                            <span class="profile-handle">@johan_drick</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+
+    <footer>
+        <div class="footer-parent">
+            <div class="footer-content">
+                <h2 class="brand-name">Fitness</h2>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym. With hundreds of professional workouts.</p>
+            </div>
+
+            <div class="get-started-columns">
+                <div class="get-started-column">
+                    <h4 class="get-started-col-title">Get Started</h4>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">Service</a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">Contact Us</a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">Affiliate Program</a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">About Us</a>
+                </div>
+
+                <div class="get-started-column">
+                    <h4 class="get-started-col-title">Get Started</h4>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">Fitness</a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">Platform</a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">Without Libary</a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">App Design</a>
+                </div>
+            </div>
+        </div>
+        <p class="copy-right">All right reserved @Fitness 2024</p>
+    </footer>
 </body>
 
 </html>
