meet out team section desktop styles completed

--- a/index.html
+++ b/index.html
@@ -159,6 +159,51 @@
             </div>
         </section>
 
+        <section class="meet-our-team">
+            <div class="meet-our-team-content">
+                <h2 class="title">Meet our Team</h2>]
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="team-members">
+                <div class="team-member trainer-1">
+                    <div class="member-info">
+                        <h4 class="member-name">Jerome Bell</h4>
+                        <p class="member-position">Trainer</p>
+                    </div>
+                </div>
+                <div class="team-member trainer-2">
+                    <div class="member-info">
+                        <h4 class="member-name">Cameron Willi</h4>
+                        <p class="member-position">Trainer</p>
+                    </div>
+                </div>
+                <div class="team-member trainer-3">
+                    <div class="member-info">
+                        <h4 class="member-name">Darrell Steward</h4>
+                        <p class="member-position">Trainer</p>
+                    </div>
+                </div>
+                <div class="team-member trainer-4">
+                    <div class="member-info">
+                        <h4 class="member-name">Dianne Russell</h4>
+                        <p class="member-position">Trainer</p>
+                    </div>
+                </div>
+                <div class="team-member trainer-5">
+                    <div class="member-info">
+                        <h4 class="member-name">Cody Fisher</h4>
+                        <p class="member-position">Trainer</p>
+                    </div>
+                </div>
+                <div class="team-member trainer-6">
+                    <div class="member-info">
+                        <h4 class="member-name">Theresa Webb</h4>
+                        <p class="member-position">Trainer</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="testimonial">
             <div class="testimonial-content">
                 <h2 class="title">Testimonials</h2>
