meet our team section full responsive completed

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="team-member trainer-2">
                     <div class="member-info">
-                        <h4 class="member-name">Cameron Willi</h4>
+                        <h4 class="member-name">Cameron Will..</h4>
                         <p class="member-position">Trainer</p>
                     </div>
                 </div>
@@ -189,13 +189,13 @@
                         <p class="member-position">Trainer</p>
                     </div>
                 </div>
-                <div class="team-member trainer-5">
+                <div class="team-member trainer-5 hide">
                     <div class="member-info">
                         <h4 class="member-name">Cody Fisher</h4>
                         <p class="member-position">Trainer</p>
                     </div>
                 </div>
-                <div class="team-member trainer-6">
+                <div class="team-member trainer-6 hide">
                     <div class="member-info">
                         <h4 class="member-name">Theresa Webb</h4>
                         <p class="member-position">Trainer</p>
