exercise section completed with responsive styles

--- a/index.html
+++ b/index.html
@@ -99,6 +99,40 @@
             </div>
         </section>
 
+        <!-- training and exercise -->
+        <section class="training-and-exercise">
+            <div class="training-and-exercise-content">
+                <h2 class="title">Training and Exercise</h2>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym.</p>
+            </div>
+            <div class="exercise-container">
+                <div class="first-column">
+                    <div class="exercise exercise-1">
+                        <p class="exercise-name"> Leg Press </p>
+                    </div>
+                    <div class="exercise exercise-2">
+                        <p class="exercise-name"> Push Up </p>
+                    </div>
+                    <div class="exercise exercise-3 hide">
+                        <p class="exercise-name"> Squad Jump </p>
+                    </div>
+                </div>
+                <div class="second-column">
+                    <div class="exercise exercise-4">
+                        <p class="exercise-name"> Leg Press </p>
+                    </div>
+                    <div class="exercise exercise-5">
+                        <p class="exercise-name"> Leg Press </p>
+                    </div>
+                    <div class="exercise exercise-6 hide">
+                        <p class="exercise-name"> Leg Press </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- bmi calculator -->
         <section class="bmi-calculator-container">
             <div class="bmi-content">
                 <h2 class="title">BMI Calculator</h2>
@@ -159,10 +193,12 @@
             </div>
         </section>
 
+        <!-- meet our team -->
         <section class="meet-our-team">
             <div class="meet-our-team-content">
                 <h2 class="title">Meet our Team</h2>]
-                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym.</p>
             </div>
             <div class="team-members">
                 <div class="team-member trainer-1">
@@ -204,6 +240,7 @@
             </div>
         </section>
 
+        <!-- Testimonial -->
         <section class="testimonial">
             <div class="testimonial-content">
                 <h2 class="title">Testimonials</h2>
@@ -213,7 +250,10 @@
             <div class="testimonial-cards-container">
                 <div class="testimonial-card">
                     <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
-                    <p class="feedback">I was blown away by their level of service. They truly listened to my needs and <mark>delivered a solution that exceeded my expectations.</mark> Their expertise is unparalleled!</p>
+                    <p class="feedback">I was blown away by their level of service. They truly listened to my needs and
+                        <mark>delivered a solution that exceeded my expectations.</mark> Their expertise is
+                        unparalleled!
+                    </p>
                     <div class="profile-info">
                         <img src="assets/images/habits-1.png" alt="" class="profile-pic">
                         <div class="name-handle-container">
@@ -239,7 +279,8 @@
                 <div class="testimonial-card">
                     <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
                     <p class="feedback">Their innovative approach to problem-solving is refreshing. They went above and
-                        beyond to <mark>ensure my complete satisfaction.</mark> I wholeheartedly recommend their services</p>
+                        beyond to <mark>ensure my complete satisfaction.</mark> I wholeheartedly recommend their
+                        services</p>
                     <div class="profile-info">
                         <img src="assets/images/habits-3.png" alt="" class="profile-pic">
                         <div class="name-handle-container">
@@ -251,7 +292,8 @@
                 </div>
                 <div class="testimonial-card">
                     <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
-                    <p class="feedback">Excellent customer service and top-notch quality. A pleasure to work with. Their dedication to customer satisfaction is commendable</p>
+                    <p class="feedback">Excellent customer service and top-notch quality. A pleasure to work with. Their
+                        dedication to customer satisfaction is commendable</p>
                     <div class="profile-info">
                         <img src="assets/images/habits-4.png" alt="" class="profile-pic">
                         <div class="name-handle-container">
@@ -264,7 +306,8 @@
                 <div class="testimonial-card">
                     <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
                     <p class="feedback">Their team is incredibly talented and dedicated. They made the entire process
-                       <mark>stress-free and enjoyable.</mark> I couldn't be happier with the results</p>
+                        <mark>stress-free and enjoyable.</mark> I couldn't be happier with the results
+                    </p>
                     <div class="profile-info">
                         <img src="assets/images/habits-1.png" alt="" class="profile-pic">
                         <div class="name-handle-container">
@@ -316,8 +359,10 @@
                 </div>
                 <div class="testimonial-card">
                     <span class="quotes"><i class="fa-solid fa-quote-left"></i></span>
-                    <p class="feedback">Their customer service is top-notch. They were <mark>always available to answer my
-                        questions</mark> and address my concerns. I highly recommend them to anyone looking for a reliable
+                    <p class="feedback">Their customer service is top-notch. They were <mark>always available to answer
+                            my
+                            questions</mark> and address my concerns. I highly recommend them to anyone looking for a
+                        reliable
                         partner</p>
                     <div class="profile-info">
                         <img src="assets/images/habits-1.png" alt="" class="profile-pic">
