--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p class="description">A huge selection of health and fitness content, healthy recipes and
                     transformation stories to help you get fit and stay fit!</p>
                 <div class="banner-btn-container">
-                    <button class="primary-btn">Join Club Now!</button>
+                    <button class="primary-btn"><span class="club-text">Join Club Now!</span> <span class="no-club-text">Join Now!</span> </button>
                     <button class="secondary-btn">Download App</button>
                 </div>
             </div>
