The team members section has been redesigned to perfectly match the Figma design

--- a/index.html
+++ b/index.html
@@ -201,40 +201,46 @@
                     income or access to a gym.</p>
             </div>
             <div class="team-members">
-                <div class="team-member trainer-1">
-                    <div class="member-info">
-                        <h4 class="member-name">Jerome Bell</h4>
-                        <p class="member-position">Trainer</p>
+                <div class="team-col-1">
+                    <div class="team-member trainer-1">
+                        <div class="member-info">
+                            <h4 class="member-name">Jerome Bell</h4>
+                            <p class="member-position">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-member trainer-4">
+                        <div class="member-info">
+                            <h4 class="member-name">Dianne Russell</h4>
+                            <p class="member-position">Trainer</p>
+                        </div>
                     </div>
                 </div>
-                <div class="team-member trainer-2">
-                    <div class="member-info">
-                        <h4 class="member-name">Cameron Will..</h4>
-                        <p class="member-position">Trainer</p>
+                <div class="team-col-2">
+                    <div class="team-member trainer-2">
+                        <div class="member-info">
+                            <h4 class="member-name">Cameron Will..</h4>
+                            <p class="member-position">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-member trainer-5">
+                        <div class="member-info">
+                            <h4 class="member-name">Cody Fisher</h4>
+                            <p class="member-position">Trainer</p>
+                        </div>
                     </div>
                 </div>
-                <div class="team-member trainer-3">
-                    <div class="member-info">
-                        <h4 class="member-name">Darrell Steward</h4>
-                        <p class="member-position">Trainer</p>
+                <div class="team-col-3">
+                    <div class="team-member trainer-3">
+                        <div class="member-info">
+                            <h4 class="member-name">Darrell Steward</h4>
+                            <p class="member-position">Trainer</p>
+                        </div>
                     </div>
-                </div>
-                <div class="team-member trainer-4">
-                    <div class="member-info">
-                        <h4 class="member-name">Dianne Russell</h4>
-                        <p class="member-position">Trainer</p>
-                    </div>
-                </div>
-                <div class="team-member trainer-5 hide">
-                    <div class="member-info">
-                        <h4 class="member-name">Cody Fisher</h4>
-                        <p class="member-position">Trainer</p>
-                    </div>
-                </div>
-                <div class="team-member trainer-6 hide">
-                    <div class="member-info">
-                        <h4 class="member-name">Theresa Webb</h4>
-                        <p class="member-position">Trainer</p>
+                    <div class="team-member trainer-6">
+                        <div class="member-info">
+                            <h4 class="member-name">Theresa Webb</h4>
+                            <p class="member-position">Trainer</p>
+                        </div>
                     </div>
                 </div>
             </div>
